--- a/src/vista/JFrameProveedor.form
+++ b/src/vista/JFrameProveedor.form
@@ -246,6 +246,7 @@
                 </Property>
               </Properties>
               <Events>
+                <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTableProveedoresMouseClicked"/>
                 <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jTableProveedoresKeyReleased"/>
               </Events>
             </Component>
